<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/colorTransparentBg"
              android:gravity="center"
              android:orientation="vertical"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:background="@color/colorWhite"
        android:orientation="vertical"
        android:gravity="center"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_15"
            android:text="@string/hint"
            android:textSize="@dimen/sp_15"
            android:textColor="@color/colorFont"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_20"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_service_phone"
                android:textColor="@color/colorFont"
                android:textSize="@dimen/sp_15"/>

            <TextView
                android:id="@+id/tv_popwindow_service_phone_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_service_phone_number"
                android:textColor="@color/colorFont"
                android:textSize="@dimen/sp_15"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_30"
            android:paddingLeft="@dimen/dp_40"
            android:paddingRight="@dimen/dp_40"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_popwindow_service_confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirm"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/sp_14"
                />

            <android.support.v4.widget.Space
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/tv_popwindow_service_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:textColor="@color/colorFont"
                />
        </LinearLayout>

    </LinearLayout>


</LinearLayout>