<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/colorGray8"
    >

    <android.support.v4.widget.Space
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorWhite"
        >
        <TextView
            android:id="@+id/tv_popup_window_exit_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/exit_login_choose"
            android:padding="@dimen/dp_15"
            android:gravity="center"
            />
        <View
            style="@style/HorizontalLine"
            />
        <TextView
            android:id="@+id/tv_popwindow_exit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/exit_login_sure"
            android:textColor="@color/colorBlueTitle"
            android:padding="@dimen/dp_15"
            android:gravity="center"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0.3"
            android:background="@color/colorGray"
            />
        <TextView
            android:id="@+id/tv_popwindow_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/exit_login_cancel"
            android:padding="@dimen/dp_15"
            android:gravity="center"
            />

    </LinearLayout>

</LinearLayout>