<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/colorTransparentBg"
              android:gravity="center"
              android:orientation="vertical"
              android:paddingBottom="10dp"
              android:paddingLeft="80px"
              android:paddingRight="80px">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_white"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            android:id="@+id/tv_popwindow_pay_fail_hit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingTop="@dimen/dp_20"
            android:text="@string/hint"
            android:textColor="@color/colorFont"
            android:textSize="@dimen/sp_15"/>

        <TextView
            android:id="@+id/tv_popwindow_pay_fail_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="@dimen/dp_32"
            android:text="@string/pay_fail_again"
            android:textColor="@color/colorGray"
            android:textSize="@dimen/sp_15"/>



       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginLeft="@dimen/dp_32"
           android:layout_marginRight="@dimen/dp_32"
           android:orientation="horizontal">
           <TextView
               android:id="@+id/tv_popwindow_pay_fail_cancel"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:background="@drawable/shape_white"
               android:gravity="center_horizontal"
               android:text="@string/cancel"
               android:layout_marginBottom="@dimen/dp_20"
               android:layout_marginRight="@dimen/dp_15"
               android:textColor="@color/colorBlue"
               android:textSize="@dimen/sp_15"/>
           <TextView
               android:id="@+id/tv_popwindow_pay_fail_again"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:background="@drawable/shape_blue"
               android:gravity="center_horizontal"
               android:text="@string/again_pay"
               android:layout_marginLeft="@dimen/dp_15"
               android:layout_marginBottom="@dimen/dp_20"
               android:textColor="@color/colorWhite"
               android:textSize="@dimen/sp_12"/>
       </LinearLayout>

    </LinearLayout>

</LinearLayout>