<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="@dimen/dp_10"
              android:background="@color/colorItemBgGray"
              android:orientation="vertical"
              android:paddingBottom="@dimen/dp_15"
              android:paddingLeft="@dimen/dp_10"
              android:paddingRight="@dimen/dp_10"
              android:paddingTop="@dimen/dp_15">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/peccancy_time"
            android:textColor="@color/colorFont"
            android:textSize="@dimen/sp_14"/>

        <TextView
            android:id="@+id/tv_item_peccancy_history_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorFont"
            android:textSize="@dimen/sp_14"/>

        <android.support.v4.widget.Space
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_15"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/peccancy_place"
            android:textColor="@color/colorGrayFont"
            android:textSize="@dimen/sp_12"/>

        <TextView
            android:id="@+id/tv_item_peccancy_history_place"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorGrayFont"
            android:textSize="@dimen/sp_12"/>

        <android.support.v4.widget.Space
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/peccancy_action"
            android:textColor="@color/colorGrayFont"
            android:textSize="@dimen/sp_12"/>

        <TextView
            android:id="@+id/tv_item_peccancy_history_action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorGrayFont"
            android:textSize="@dimen/sp_12"/>

        <android.support.v4.widget.Space
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_15"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/peccancy_fine_points"
                android:textColor="@color/colorFont"
                android:textSize="@dimen/sp_14"/>

            <TextView
                android:id="@+id/tv_item_peccancy_history_points"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorRedFont"
                android:textSize="@dimen/sp_14"/>
        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/peccancy_fine_money"
            android:textColor="@color/colorFont"
            android:textSize="@dimen/sp_14"/>

        <TextView
            android:id="@+id/tv_item_peccancy_history_money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pay_money"
            android:textColor="@color/colorRedFont"
            android:textSize="@dimen/sp_14"/>

        <android.support.v4.widget.Space
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

    </LinearLayout>
</LinearLayout>