<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="@dimen/dp_10"
              android:background="@color/colorTopBar"
              android:gravity="center_horizontal"
              android:orientation="vertical"
              android:paddingLeft="@dimen/dp_10"
              android:paddingRight="@dimen/dp_10">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@color/colorTopBar"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/dp_10"
        android:paddingTop="@dimen/dp_10">

        <TextView
            android:id="@+id/tv_item_peccancy_query_plate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/record_blue_line"
            android:drawablePadding="@dimen/dp_5"
            android:text="@string/tv_car_number"
            android:textColor="@color/colorFont"
            android:textSize="@dimen/sp_15"/>

        <android.support.v4.widget.Space
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/tv_item_peccancy_query_again"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/query_blue_button"
            android:padding="@dimen/dp_5"
            android:text="@string/again_query"
            android:textColor="@color/colorTopBar"
            android:textSize="@dimen/sp_12"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dp_10"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0.5"
        android:background="@color/colorBgGray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_32"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_10"
            android:text="@string/peccancy_history"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_item_history_query_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_item_history_peccancy_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:id="@+id/ll_item_history_peccancy_all"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_40"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/dp_5"
                android:drawableRight="@drawable/next_blue"
                android:text="@string/query_all"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/sp_12"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_item_history_query_null"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_60"
        android:layout_marginBottom="@dimen/dp_10"
        android:background="@color/colorItemBgGray"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_null"
            android:textColor="@color/colorFontGray5"
            android:textSize="@dimen/sp_12"/>
    </LinearLayout>
</LinearLayout>
